objects/BenchMar_AtciontStep__c.object
<CustomObject><fields>
        <fullName>Implementation_Benchmark__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Implementation bench mark</description>
        <label>Implementation Benchmark</label>
        <referenceTo>Implementation_Benchmark__c</referenceTo>
        <relationshipLabel>BenchMar_ActiontSteps</relationshipLabel>
        <relationshipName>BenchMar_ActiontSteps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Improvement_Action_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Improvement Action Step</label>
        <referenceTo>Improvement_Action_Step__c</referenceTo>
        <relationshipLabel>BenchMar_ActiontSteps</relationshipLabel>
        <relationshipName>BenchMar_ActiontSteps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Public_Facing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Public Facing</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ZPIF_UIP_Identidier__c</fullName>
        <label>ZPIF UIP Identidier</label>
        <length>50</length>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>BenchMar_ActiontStep</label><nameField>
        <displayFormat>AB-{0000}</displayFormat>
        <label>BenchMar_AtciontStep Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>BenchMar_ActiontSteps</pluralLabel><sharingModel>ReadWrite</sharingModel></CustomObject>